# QATLibrary

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  qat-ci.yml  tests.yml
resources/: variables.py  variables.yaml
sample/: TestCases.csv  Tests.csv  config.yaml
src/QATLibrary/: QATLibrary.py  TLSAdapter.py  __init__.py  __main__.py  cli.py  templates.py  version.py
src/QATLibrary/templates/: TestCases.csv  config.yaml
