[metadata]
name = QATLibrary
url = ''
version = attr: src.QATLibrary.VERSION
project_urls =
    Docs = file: README.md
description = An implementation of JSON Schema validation for Python
long_description = file: README.md
long_description_content_type = text/x-rst
author = Sharif Rahman
author_email = shrif.sbu@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
python_requires = ">=3.6"

[options]
zip_safe = False
include_package_data = False
package_dir=
    =src
packages = find:
setup_requires =
    requests>2
    robotframework>3
    requests_oauthlib>1
    pyyaml>5
    jsonschema>3
install_requires =
    requests>2
    robotframework>3
    pyOpenSSL>20
    requests_oauthlib>1
    pyyaml>5
    jsonschema>3

[options.package_data]
resources = resources/*.*

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    qat = QATLibrary.cli:main

[bdist_wheel]
universal = 1

