[metadata]
name = QATLibrary
url = https://github.com/toil-free/QATLibrary.git
version = attr: src.QATLibrary.VERSION
project_urls =
    Docs = https://github.com/toil-free/QATLibrary/README.md
    Issue Tracker = https://github.com/toil-free/QATLibrary/issues
description = Data/Configuration Driven REST API Test Automation Library. Can be used as a Robot Framework Library or as standalone CLI tool.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sharif Rahman
author_email = shrif.sbu@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
python_requires = ">=3.6"

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
setup_requires =
    requests>2
    robotframework>4
    requests_oauthlib>1
    pyyaml>5
    jsonschema>3
    termcolor>1.0

install_requires =
    requests>2
    robotframework>4
    requests_oauthlib>1
    pyyaml>5
    jsonschema>3
    termcolor>1.0

[options.packages.find]
where = src

[options.package_data]
* = templates/*.*

[options.entry_points]
console_scripts =
    qat = QATLibrary.cli:main

[bdist_wheel]
universal = 1
